--- a/Readme.html
+++ b/Readme.html
@@ -147,8 +147,8 @@
     <li>Connected LDraw Library of Parts installation detection to configuration file</li>
     <li>Update <code>debugPrint()</code> function to support lists (for displaying multiple items at once)</li>
     <li>Filter out configuration file made by script in <code>setup.py</code></li>
-    <li>Updated minimum Blender version to 2.67 (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/27" target="_blank">Issue #27</a>)</li>
-    <li>Deselect objects in scene before importing (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/29" target="_blank">Issue #29</a>)</li>
+    <li>Updated minimum Blender version to 2.67 (see <a href="https://github.com/le717/LDR-Importer/issues/27" target="_blank">Issue #27</a>)</li>
+    <li>Deselect objects in scene before importing (see <a href="https://github.com/le717/LDR-Importer/issues/29" target="_blank">Issue #29</a>)</li>
 </ul>
 
 <strong>1.0</strong><br>
