--- a/Readme.html
+++ b/Readme.html
@@ -27,31 +27,27 @@
 <thead>
     <th><strong>Table of Contents</strong></th>
 </thead>
+
 <tbody>
-<tr>
-<td><a href="#WhatsNeeded">System Requirements</a>
-</td>
-</tr>
-<tr>
-<td><a href="#Install">Installation</a>
-</td>
-</tr>
-<tr>
-<td><a href="#LDrawPath">Setting the LDraw Folder Path</a>
-</td>
-</tr>
-<tr>
-<td><a href="#Changes">Change Log</a>
-</td>
-</tr>
-<tr>
-<td><a href="#Support">Support</a>
-</td>
-</tr>
+    <tr>
+        <td><a href="#WhatsNeeded">System Requirements</a></td>
+    </tr>
+    <tr>
+        <td><a href="#Install">Installation</a></td>
+    </tr>
+    <tr>
+        <td><a href="#LDrawPath">Setting the LDraw Folder Path</a></td>
+    </tr>
+    <tr>
+        <td><a href="#Changes">Change Log</a></td>
+    </tr>
+    <tr>
+        <td><a href="#Support">Support</a></td>
+    </tr>
 </tbody>
 </table>
-<br>
 
+<br>
 <p>This is the readme for <span class="bold">LDR Importer</span> script licensed the
 <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" >General Public License Version 2.</p>
 <a name="WhatsNeeded"></a>
@@ -59,7 +55,7 @@
 
 <h3>System Requirements</h3>
 <ul>
-    <li><a href="http://www.blender.org" target="_blank">Blender 2.63 or higher</a></li>
+    <li><a href="http://www.blender.org" target="_blank">Blender 2.67 or higher</a></li>
     <li><code>import_ldraw.py</code> (included with this download)</li>
     <li><a href="http://www.ldraw.org/help/getting-started.html" target="_blank">LDraw Library of Parts</a></li>
     <li><a href="http://mlcad.lm-software.com/" target="_blank">MLCad</a>, <a href="http://www.leocad.org/trac" target="_blank">
