PROJECT IS ABOUT TO BE RENAMED OVER

--- a/Readme.html
+++ b/Readme.html
@@ -24,12 +24,9 @@
 <body>
 <a name="ToC"></a><h1 class="center">LDR Importer</h1>
 <table>
-    <th><strong>Table of Contents</strong></th>
-<thead>
-
-</thead>
-
-<tbody>
+    <tr>
+        <th><strong>Table of Contents</strong></th>
+    </tr>
     <tr>
         <td><a href="#WhatsNeeded">System Requirements</a></td>
     </tr>
@@ -45,11 +42,10 @@
     <tr>
         <td><a href="#Support">Support</a></td>
     </tr>
-</tbody>
 </table>
 
 <br>
-<p class="center">This is the readme for <span class="bold">LDR Importer</span> script licensed the
+<p class="center"> This is the readme for <span class="bold">LDR Importer</span> script licensed the
 <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" >General Public License Version 2.</a></p>
 <a name="WhatsNeeded"></a>
 <br>
@@ -94,7 +90,7 @@
 
 <strong>1.1</strong><br>
 <em>The Working Quartet</em><br>
-(Released ?? ??, 2013)<br>
+(Released November 23, 2013)<br>
 <ul>
     <li>Added Blender Render material support for Chrome, Pearlescent, Rubber, and Metal colors</li>
     <li>Removed unused import option</li>
