Readme update, still have an issue to fix before release

--- a/Readme.html
+++ b/Readme.html
@@ -45,7 +45,7 @@
 </table>
 
 <br>
-<p class="center"> This is the readme for <span class="bold">LDR Importer</span> script licensed the
+<p class="center">This is the readme for <span class="bold">LDR Importer</span> script licensed the
 <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" >General Public License Version 2.</a></p>
 <a name="WhatsNeeded"></a>
 <br>
@@ -86,11 +86,15 @@
 <p class="center">That's it! You have successfully installed <span class="bold">LDR Importer</span> and can now import your LDraw models!</p>
 <a name="Changes"></a>
 
+<h2>Please Note</h2>
+<p>If a brick cannot be found in the parts library, the import will suddenly stop with no visible error message.
+This is planned to be fixed when possible.</p>
+
 <h2>Change Log</h2>
 
 <strong>1.1</strong><br>
 <em>The Working Quartet</em><br>
-(Released November 23, 2013)<br>
+(Released November ??, 2013)<br>
 <ul>
     <li>Added Blender Render material support for Chrome, Pearlescent, Rubber, and Metal colors</li>
     <li>Removed unused import option</li>
@@ -149,6 +153,7 @@
     <li>Deselect objects in scene before importing (see <a href="https://github.com/le717/LDR-Importer/issues/29" target="_blank">Issue #29</a>)</li>
     <li>Renamed script to <code>import_ldraw.py</code> to better match other Blender Addons</li>
     <li>Major HTML Readme update</li>
+    <li>Give proper error message for missing <code>LDConfig.ldr</code></li>
 </ul>
 
 <strong>1.0</strong><br>
