Make the trick less "hacky", move script to root
of release Zip so Blender can detect it.

--- a/Readme.html
+++ b/Readme.html
@@ -154,6 +154,8 @@ This is planned to be fixed when possible.</p>
     <li>Renamed script to <code>import_ldraw.py</code> to better match other Blender Addons</li>
     <li>Major HTML Readme update</li>
     <li>Give proper error message for missing <code>LDConfig.ldr</code></li>
+    <li>Move configuration file to a different location to avoid Blender "bl_info gives bad info" message</li>
+    <li>Put script in root folder of release Zip so Blender can detect it</li>
 </ul>
 
 <strong>1.0</strong><br>
