Tagging LDR Importer v1.1 - The Working Quartet

--- a/Readme.html
+++ b/Readme.html
@@ -45,8 +45,9 @@
 </table>
 
 <br>
-<p class="center">This is the readme for <span class="bold">LDR Importer</span> script licensed the
-<a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" >General Public License Version 2.</a></p>
+<p class="center">This is the readme for <span class="bold">LDR Importer</span>, licensed under the
+<a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" >General Public License Version 2.</a>
+</p>
 <a name="WhatsNeeded"></a>
 <br>
 
@@ -79,7 +80,7 @@
     <li>There are a few import options available, such as using high quality bricks and performing basic model optimization or using the original mesh.
     <br>Select whatever options you desire, choose the model you want to import, and click the <span class="italic">Import LDraw Model</span> button.
     <br>Your model will quickly be imported into the current scene using the desired options.</li>
-    <li style="font-size:1.1em;"><span class="bold italic">Note about materials:</span> Material colors are render engine dependant.
+    <li style="font-size:1.1em; padding:4px;"><span class="bold italic">Note about materials:</span> Material colors are render engine dependant.
     That is, if you are currently using the Cycles engine, it will uses Cycles node materials, and vice verse for Blender Internal.</li>
 </ul>
 <br>
@@ -94,9 +95,9 @@ This is planned to be fixed when possible.</p>
 
 <strong>1.1</strong><br>
 <em>The Working Quartet</em><br>
-(Released November ??, 2013)<br>
+(Released December 2, 2013)<br>
 <ul>
-    <li>Added Blender Render material support for Chrome, Pearlescent, Rubber, and Metal colors</li>
+    <li>Added Blender Internal material support for Chrome, Pearlescent, Rubber, and Metal colors</li>
     <li>Removed unused import option</li>
     <li>Added basic support for Cycles materials and switch to use them</li>
     <li>Fix string concentration errors</li>
@@ -305,7 +306,7 @@ This is planned to be fixed when possible.</p>
 
 <h2>Support</h2>
 <p>To submit bug reports or get the newest, bleeding-edge script, please go to
-<a href="https://github.com/le717/LDR-Importer" target="_blank">https://github.com/le717/LDR-Importer</a>.
+<a href="https://github.com/le717/LDR-Importer" target="_blank">https://github.com/le717/LDR-Importer</a>
 <br>
 To download the newest release, please visit <a href="https://github.com/le717/LDR-Importer/releases" target="_blank">
 https://github.com/le717/LDR-Importer/releases</a></p>
