Close #37 - Read files in USC-2BE and USC-2LE encoding,
Read LDConfig.ldr and config.py using UTF-8 encoding

--- a/Readme.html
+++ b/Readme.html
@@ -89,10 +89,17 @@
 
 <h2>Please Note</h2>
 <p>If a brick cannot be found in the parts library, the import will suddenly stop with no visible error message.
-This is planned to be fixed when possible.</p>
+This is planned to be fixed as soon as possible.</p>
 
 <h2>Change Log</h2>
-
+    
+<strong>1.2</strong><br>
+(Released ?? ??, 2014)<br>
+<ul>
+    <li>Read <code>LDConfig.ldr</code> and <code>config.py</code> using <code>UTF-8</code> encoding</li>
+    <li>Added support for reading models in <code>UCS-2BE</code> & <code>UCS-2LE</code> encoding (see <a href="https://github.com/le717/LDR-Importer/issues/37" target="_blank">Issue #37</a>)</li>
+</ul>
+    
 <strong>1.1</strong><br>
 <em>The Working Quartet</em><br>
 (Released December 2, 2013)<br>
