Update change log for #38

--- a/Readme.html
+++ b/Readme.html
@@ -98,6 +98,7 @@ This is planned to be fixed as soon as possible.</p>
 <ul>
     <li>Read <code>LDConfig.ldr</code> and <code>config.py</code> using <code>UTF-8</code> encoding</li>
     <li>Added support for reading models in <code>UCS-2BE</code> & <code>UCS-2LE</code> encoding (see <a href="https://github.com/le717/LDR-Importer/issues/37" target="_blank">Issue #37</a>)</li>
+    <li>Always save <code>config.py</code> in user's <code>AppData</code> on Windows (see <a href="https://github.com/le717/LDR-Importer/issues/38" target="_blank">Issue #38/a>)</li>
 </ul>
     
 <strong>1.1</strong><br>
