Remove Video Game Cleanuo option (@rioforce said it is not needed)
Fix HTML errors using W3C validation service

I am now getting a VERY drastic speed reduction in the cleanup process,
though it may just be my laptop since everything seems to be running
slowly...

--- a/Readme.html
+++ b/Readme.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<a name="ToC"></a><h1 class="center">LDR Importer</h1>
+<a id="ToC"></a><h1 class="center">LDR Importer</h1>
 <table>
     <tr>
         <th><strong>Table of Contents</strong></th>
@@ -48,7 +48,7 @@
 <p class="center">This is the readme for <span class="bold">LDR Importer</span>, licensed under the
 <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" >General Public License Version 2.</a>
 </p>
-<a name="WhatsNeeded"></a>
+<a id="WhatsNeeded"></a>
 <br>
 
 <h3>System Requirements</h3>
@@ -58,7 +58,7 @@
     <li><a href="http://www.ldraw.org/help/getting-started.html" target="_blank">LDraw Parts Library</a></li>
     <li><a href="http://mlcad.lm-software.com/" target="_blank">MLCad</a>, <a href="http://www.leocad.org/trac" target="_blank">
     LeoCAD</a> (both optional)</li>
-</ul><a name="Install"></a>
+</ul><a id="Install"></a>
 
 <h3>Installation</h3>
 
@@ -67,7 +67,7 @@
     <li>Open Blender, and click <span class="italic">File &gt; User Preferences &gt; Addons &gt; Install from File...</span></li>
     <li>Browse for the Zip archive you downloaded and select it.</li>
     <li>Find <span class="bold">LDR Importer</span> in the list of Addons (search for "LDR" if needed), and tick the check mark to activate it.</li>
-    <li>If you want to have the script activated at all times, click the <span class="italic">Save User Settings</span> button.<a name="LDrawPath"></a></li>
+    <li>If you want to have the script activated at all times, click the <span class="italic">Save User Settings</span> button.<a id="LDrawPath"></a></li>
 </ul>
 
 <h3>Setting the LDraw Folder Path</h3>
@@ -85,22 +85,23 @@
 </ul>
 <br>
 <p class="center">That's it! You have successfully installed <span class="bold">LDR Importer</span> and can now import your LDraw models!</p>
-<a name="Changes"></a>
+<a id="Changes"></a>
 
 <h2>Please Note</h2>
 <p>If a brick cannot be found in the parts library, the import will suddenly stop with no visible error message.
 This is planned to be fixed as soon as possible.</p>
 
 <h2>Change Log</h2>
-    
+
 <strong>1.2</strong><br>
 (Released ?? ??, 2014)<br>
 <ul>
     <li>Read <code>LDConfig.ldr</code> and <code>config.py</code> using <code>UTF-8</code> encoding</li>
     <li>Added support for reading models in <code>UCS-2BE</code> & <code>UCS-2LE</code> encoding (see <a href="https://github.com/le717/LDR-Importer/issues/37" target="_blank">Issue #37</a>)</li>
-    <li>Always save <code>config.py</code> in user's <code>AppData</code> on Windows (see <a href="https://github.com/le717/LDR-Importer/issues/38" target="_blank">Issue #38/a>)</li>
+    <li>Always save <code>config.py</code> in user's <code>AppData</code> on Windows (see <a href="https://github.com/le717/LDR-Importer/issues/38" target="_blank">Issue #38</a>)</li>
+    <li>Remove <code>GameFix</code> import option</li>
 </ul>
-    
+
 <strong>1.1</strong><br>
 <em>The Working Quartet</em><br>
 (Released December 2, 2013)<br>
@@ -310,7 +311,7 @@ This is planned to be fixed as soon as possible.</p>
 (Released February 23, 2012)<br>
 <ul>
     <li>Original version by David Pluntze</li>
-</ul><a name="Support"></a>
+</ul><a id="Support"></a>
 
 <h2>Support</h2>
 <p>To submit bug reports or get the newest, bleeding-edge script, please go to
