Minor readme fixes

--- a/Readme.html
+++ b/Readme.html
@@ -75,7 +75,7 @@
     <li>Click <span class="italic">File &gt; Import &gt; LDraw Model (.ldr/.dat)</span></li>
     <li>In the bottom left corner of your screen, under the <span class="bold">Import Options:</span> header, there is a small field with the label
     <span class="bold">LDraw Path</span>.
-    <br>Modify the field with the proper folder path to your <span class="italic">LDraw Parts Library</span> installation path.
+    <br>Modify the field with the proper folder path to your LDraw Parts Library installation path.
     <br>On Windows, it is attempted to detect the installation path in the most common locations, so you may not need to set it at all.</li>
     <li>There are a few import options available, such as using high quality bricks and performing basic model optimization or using the original mesh.
     <br>Select whatever options you desire, choose the model you want to import, and click the <span class="italic">Import LDraw Model</span> button.
@@ -172,17 +172,17 @@ This is planned to be fixed as soon as possible.</p>
 <em>Banbury Edition</em><br>
 (Released October 1, 2013)
 <ul>
-    <li>Uploaded source code to <a href="https://github.com/Triangle717/LDR-Importer" target="_blank">GitHub</a>. -Triangle717</li>
+    <li>Uploaded source code to <a href="https://github.com/Triangle717/LDR-Importer/" target="_blank">GitHub</a>. -Triangle717</li>
     <li>Switched to plain text version of GPL V2</li>
-    <li>Converted all whitespace to 4 spaces whitespace to conform to Python standards using Blender scripting scene</li>
+    <li>Converted all white space to 4 spaces white space to conform to Python standards using Blender scripting scene</li>
     <li>Added most of <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt's</a> Linux patch, with minor changes</li>
     <li>Made LDraw folder paths case-insensitive</li>
-    <li>Added ability to set LDraw System of Tools folder path from within Blender using code from <a href="https://github.com/impiaaa/blender-ldraw" target="_blank">Spencer Alves's LDraw Importer</a></li>
+    <li>Added ability to set LDraw System of Tools folder path from within Blender using code from <a href="https://github.com/impiaaa/blender-ldraw/" target="_blank">Spencer Alves's LDraw Importer</a></li>
     <li>Added ability to disable automatic model cleanup (remove doubles and recalculate normals). Doing so is <strong>not advised</strong></li>
     <li>Changed <code>dict()</code> to the proper <code>{}</code> syntax</li>
     <li>Script cleanup</li>
     <li>Updated Readme with new information</li>
-    <li>Added OS X and Linux LDraw System of Tools default installation path</li>
+    <li>Added Mac OS X and Linux LDraw System of Tools default installation path</li>
     <li>Updated script options messages</li>
     <li>Added ability to disable use of high-res bricks</li>
     <li>Correctly construct quads in bricks - patch submitted via GitHub by <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
@@ -196,7 +196,7 @@ This is planned to be fixed as soon as possible.</p>
     <li>Fix for crash when importing a second time during the same session  - patch submitted via GitHub by
     <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
     <li>Moved all imports to separate lines</li>
-    <li>Removed whitespace in blank lines</li>
+    <li>Removed white space in blank lines</li>
     <li>Converted reading of <code>LDCondig.ldr</code> to use <code>with</code> statement</li>
     <li>Lots of PEP 8 fixes</li>
     <li>Added docstrings for various functions</li>
