#55 - Initialize `paths` array at the beginning of the script,
fix bug with high-/low-res primitives not being imported properly
(builds on #50, #52, #54, use value of `isPart` directly, removed
once-used `file_directory` variable, small cleanup, update Change log

--- a/Readme.html
+++ b/Readme.html
@@ -93,13 +93,17 @@ This is planned to be fixed as soon as possible.</p>
 
 <h2>Change Log</h2>
 
-<strong>1.2</strong><br>
+<strong>1.1.5</strong><br>
 (Released ?? ??, 2014)<br>
 <ul>
     <li>Read <code>LDConfig.ldr</code> and <code>config.py</code> using <code>UTF-8</code> encoding</li>
     <li>Added support for reading models in <code>UCS-2BE</code> & <code>UCS-2LE</code> encoding (see <a href="https://github.com/le717/LDR-Importer/issues/37" target="_blank">Issue #37</a>)</li>
     <li>Always save <code>config.py</code> in user's <code>AppData</code> on Windows (see <a href="https://github.com/le717/LDR-Importer/issues/38" target="_blank">Issue #38</a>)</li>
     <li>Remove <code>GameFix</code> import option</li>
+    <li>Improve part path lookup (see <a href="https://github.com/le717/LDR-Importer/issues/40" target="_blank">Issue #40</a>, <a href="https://github.com/le717/LDR-Importer/issues/50" target="_blank">#50</a>)</li>
+    <li>Give unofficial files precedence over official ones, correct usage of <code>p/8</code> primitives folder (see <a href="https://github.com/le717/LDR-Importer/issues/52" target="_blank">Issue #52</a>)</li>
+     <li>Add <a href="https://github.com/MinnieTheMoocher" target="_blank">MinnieTheMoocher</a> to author list</li>
+    <li>Reworked display of import options</li>
 </ul>
 
 <strong>1.1</strong><br>
