Fix behavior of `debugPrint()`, update change log

--- a/Readme.html
+++ b/Readme.html
@@ -102,8 +102,11 @@ This is planned to be fixed as soon as possible.</p>
     <li>Remove <code>GameFix</code> import option</li>
     <li>Improve part path lookup (see <a href="https://github.com/le717/LDR-Importer/issues/40" target="_blank">Issue #40</a>, <a href="https://github.com/le717/LDR-Importer/issues/50" target="_blank">#50</a>)</li>
     <li>Give unofficial files precedence over official ones, correct usage of <code>p/8</code> primitives folder (see <a href="https://github.com/le717/LDR-Importer/issues/52" target="_blank">Issue #52</a>)</li>
-     <li>Add <a href="https://github.com/MinnieTheMoocher" target="_blank">MinnieTheMoocher</a> to author list</li>
+    <li>Add <a href="https://github.com/MinnieTheMoocher" target="_blank">MinnieTheMoocher</a> to author list</li>
     <li>Reworked display of import options</li>
+    <li>Initialize <code>paths</code> array at the beginning of the script</li>
+    <li>Fix bug with high-/low-res primitives not being imported properly</li>
+    <li><code>debugPrint()</code> behavior was not as expected</li>
 </ul>
 
 <strong>1.1</strong><br>
