--- a/Readme.html
+++ b/Readme.html
@@ -119,6 +119,7 @@
     <li>Initialize <code>paths</code> array at the beginning of the script</li>
     <li>Fix bug with high-/low-res primitives not being imported properly</li>
     <li><code>debugPrint()</code> behavior was not as expected</li>
+    <li>Fixed issue with multiple edge split modifers getting added to each brick (see <a href="https://github.com/le717/LDR-Importer/issues/57">Issue #57</a>)</li>
 </ul>
 
 <strong>1.1</strong><br>
