Tagging LDR Importer v1.1.5 - Standards

--- a/Readme.html
+++ b/Readme.html
@@ -102,14 +102,14 @@
 
 <strong>1.1.5</strong><br>
 <em>Standards</em><br>
-(Released ?? ??, 2014)<br>
+(Released January 18, 2014)<br>
 <ul>
     <li>Read <code>LDConfig.ldr</code> and <code>config.py</code> using <code>UTF-8</code> encoding</li>
     <li>Added support for reading models in <code>UCS-2BE</code> & <code>UCS-2LE</code> encoding
         (see <a href="https://github.com/le717/LDR-Importer/issues/37">Issue #37</a>)</li>
     <li>Always save <code>config.py</code> in user's <code>AppData</code> on Windows
         (see <a href="https://github.com/le717/LDR-Importer/issues/38">Issue #38</a>)</li>
-    <li>Remove <code>GameFix</code> import option</li>
+    <li>Remove <code>GameFix</code> cleanup option</li>
     <li>Improve part path lookup (see <a href="https://github.com/le717/LDR-Importer/issues/40">Issue #40</a>,
         <a href="https://github.com/le717/LDR-Importer/issues/50">#50</a>)</li>
     <li>Give unofficial files precedence over official ones, correct usage of <code>p/8</code> primitives folder (see
@@ -119,7 +119,7 @@
     <li>Initialize <code>paths</code> array at the beginning of the script</li>
     <li>Fix bug with high-/low-res primitives not being imported properly</li>
     <li><code>debugPrint()</code> behavior was not as expected</li>
-    <li>Fixed issue with multiple edge split modifers getting added to each brick (see <a href="https://github.com/le717/LDR-Importer/issues/57">Issue #57</a>)</li>
+    <li>Fixed issue with multiple edge split modifiers being added to each brick (see <a href="https://github.com/le717/LDR-Importer/issues/57">Issue #57</a>)</li>
 </ul>
 
 <strong>1.1</strong><br>
